# centoria

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  argparse.rs  config.rs  fmt.rs  format.rs  formatter.rs  function.rs  main.rs  pad.rs  runner.rs  shell.rs
src/commands/: add.rs  exec.rs  init.rs  list.rs  mod.rs  remove.rs  show.rs
src/executors/: alias.rs  function.rs  mod.rs  subcommand.rs
